[package]
name = "infinishield"
version = "0.4.0"
edition = "2021"
description = "Invisible robust watermarking system for multimedia files"

[features]
default = []
video = ["dep:ffmpeg-next", "dep:nalgebra"]

[dependencies]
clap = { version = "4", features = ["derive"] }
image = "0.25"
imageproc = "0.26.1"
num-complex = "0.4.6"
rand = "0.8"
rand_chacha = "0.3"
rustfft = "6.4.1"
sha2 = "0.10"
tiny-skia-path = "0.12.0"
usvg = "0.47.0"

# Video support (optional) — builds FFmpeg from source, statically linked
ffmpeg-next = { version = "7", features = ["build", "build-license-gpl", "build-lib-x264"], optional = true }
nalgebra = { version = "0.33", optional = true }

[dev-dependencies]
tempfile = "3"
